# fspachinko

./: .gitignore  CRFStyleSheet.qss  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  tasks.py  ty.toml  typos.toml  whitelist.py  zensical.toml
.github/workflows/: docs.yml  release.yml
docs/: architecture.md  development.md  index.md  usage.md
docs/Utilities/: constants.md  helpers.md  interfaces.md  timestamp.md
docs/cli/: app.md  cli.md  observer.md
docs/config/: config.md  schemas.md
docs/core/: builder.md  core.md  engine.md  quota.md  reporter.md  state.md  transfer.md  validator.md  walker.md
docs/gui/: actions.md  centralwidget.md  components.md  gui.md  mainwindow.md  observer.md  qthelpers.md  settings.md  uibuilder.md  workers.md
docs/utils/: constants.md  helpers.md  interfaces.md  timestamp.md
file_roulette/: __init__.py  _cli.py  _gui.py
file_roulette/_data/configs/: file-roulette.json
file_roulette/cli/: __init__.py  __main__.py  app.py  cli.py  observer.py
file_roulette/config/: __init__.py  config.py  schemas.py
file_roulette/core/: __init__.py  builder.py  engine.py  quota.py  reporter.py  state.py  transfer.py  validator.py  walker.py
file_roulette/gui/: __init__.py  __main__.py  actions.py  centralwidget.py  components.py  gui.py  mainwindow.py  observer.py  qthelpers.py  settings.py  uibuilder.py  workers.py
file_roulette/utils/: __init__.py  constants.py  helpers.py  interfaces.py  loggers.py  paths.py  timestamp.py
file_roulette_configs/: file-roulette.json  logging.json
mandala/: __init__.py  __main__.py  _cli.py  _gui.py  mandala.json
mandala/cli/: __init__.py  cli.py
mandala/config/: __init__.py  config.py  constants.py  interfaces.py  loggers.py  protocols.py  schemas.py
mandala/core/: __init__.py  builder.py  config.py  config_validator.py  engine.py  file_validator.py  helpers.py  interfaces.py  logger.py  mandala_config.py  mandala_engine.py  mandala_logger.py  mandala_state.py  quota.py  reporter.py  runner_gui.py  state.py  timestamp.py  transfer.py  trash.py  validator.py  walker.py
mandala/gui/: __init__.py  actions.py  centralwidget.py  components.py  helpers.py  main_window.py  mainwindow.py  qt_helpers.py  qthelpers.py  runner.py  runner_gui.py  settings.py  style.qss  stylesheet.py  uibuilder.py  workers.py
mandala/utilities/: utils.py
mandala/utils/: __init__.py  constants.py  helpers.py  interfaces.py  loggers.py  paths.py  timestamp.py
mandala_config/: logging.json  mandala.json
mandala_configs/: mandala.json
src/fspachinko/: _defaultconfig.py  bootstrap.py  builder.py  config.py  constants.py  datapaths.py  fp.py  helpers.py
src/fspachinko/adapters/: __init__.py  cache.py  config_manager.py  datapaths.py  dirnamer.py  duration.py  filecounter.py  filefilter.py  filenamer.py  filesystem.py  filesystemport.py  fswalker.py  jsonport.py  loggers.py  media.py  pipeline.py  profiles.py  repository.py  system.py  transfer.py  walker.py
src/fspachinko/cli/: __init__.py  __main__.py  app.py  loggers.py  loggers_cli.py  observer.py
src/fspachinko/config/: __init__.py  config.py  converter.py  schemas.py
src/fspachinko/configuration/: __init__.py  _defaultconfig.py  model.py  profiles.py  repository.py  uow.py
src/fspachinko/core/: __init__.py  builder.py  config.py  constants.py  context.py  destination.py  dirname.py  engine.py  filecount.py  filefilter.py  filenamer.py  filterrange.py  filtertext.py  helpers.py  loggers.py  model.py  observer.py  quota.py  reporter.py  schemas.py  state.py  timestamp.py  transfer.py  validator.py  walker.py
src/fspachinko/domain/: __init__.py  commands.py  events.py  model.py
src/fspachinko/entrypoints/: __init__.py  cli.py  gui.py
src/sampledeal/: __init__.py
tests/: smoke_test.py
tests/core/: __init__.py  test_config.py  test_get_fn.py  test_helpers.py  test_model.py
(+112 files in other folders)
