[project]
name = "galton"
version = "0.0.2"
description = "Transfer random files from directory A to directory B."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.4.5",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.12.5",
    "pyinstaller>=6.18.0",
    "pyside6>=6.10.1",
    "qt-material>=2.17",
]
authors = [
    {name = "Wonyoung Jang"},
]

[project.urls]
Documentation = "https://wonyoung-jang.github.io/galton/"
Repository = "https://github.com/wonyoung-jang/galton"
Issues = "https://github.com/wonyoung-jang/galton/issues"

[project.scripts]
galton = "galton.gui.__main__:main"
galton-gui = "galton.gui.__main__:main"
galton-cli = "galton.cli.__main__:main"
 
[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.vulture]
paths = ["./src/galton", "whitelist.py"]
ignore_decorators = ["@app.*"]
min_confidence = 40
verbose = false

[dependency-groups]
dev = [
    "line-profiler>=5.0.0",
    "tprof>=1.1.0",
]
docs = [
    "mkdocstrings-python>=2.0.1",
    "zensical>=0.0.19",
]
