[project]
name = "fspachinko"
version = "0.0.3"
description = "Transfer random files from directory A to directory B."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.4.5",
    "pydantic>=2.12.5",
    "pyinstaller>=6.18.0",
    "pyside6>=6.10.2",
    "qt-material>=2.17",
]
authors = [
    {name = "Wonyoung Jang"},
]

[project.urls]
Documentation = "https://wonyoung-jang.github.io/fspachinko/"
Repository = "https://github.com/wonyoung-jang/fspachinko"
Issues = "https://github.com/wonyoung-jang/fspachinko/issues"

[project.scripts]
fspachinko = "fspachinko.gui.__main__:main"
fspachinko-gui = "fspachinko.gui.__main__:main"
fspachinko-cli = "fspachinko.cli.__main__:main"
 
[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.vulture]
paths = ["./src/fspachinko", "whitelist.py"]
ignore_decorators = ["@app.*"]
min_confidence = 40
verbose = false

[dependency-groups]
dev = [
    "line-profiler>=5.0.0",
    "tprof>=1.1.0",
]
docs = [
    "mkdocstrings-python>=2.0.1",
    "zensical>=0.0.19",
]
