[project]
name = "fspachinko"
version = "0.0.3"
description = "Transfer random files from directory A to directory B."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
]
authors = [
    {name = "Wonyoung Jang"},
]

[project.urls]
Documentation = "https://wonyoung-jang.github.io/fspachinko/"
Repository = "https://github.com/wonyoung-jang/fspachinko"
Issues = "https://github.com/wonyoung-jang/fspachinko/issues"

[project.scripts]
fspachinko = "fspachinko.entrypoints.gui.__main__:main"
fspachinko-gui = "fspachinko.entrypoints.gui.__main__:main"
fspachinko-cli = "fspachinko.entrypoints.cli.__main__:main"
# fspachinko-web = "fspachinko.web.__main__:main"

[build-system]
requires = ["uv_build>=0.9.27"]
build-backend = "uv_build"

[tool.vulture]
paths = [
    "src", 
]
ignore_decorators = [
    "@app", 
    "@field_validator", 
    "@model_validator",
]
ignore_names = [
    "model_config",
    "cls",
    "dragEnterEvent",
    "dropEvent",
    "DEFAULT_CONFIG",
]
exclude = [
    ".venv/",
    "*__init__.py",
]
min_confidence = 40
sort_by_size = true
verbose = false

[dependency-groups]
cli = [
    "cyclopts>=4.6.0",
]
dev = [
    "line-profiler>=5.0.0",
]
docs = [
    "mkdocstrings-python>=2.0.1",
    "zensical>=0.0.19",
]
gui = [
    "pyinstaller>=6.19.0",
    "pyside6-essentials>=6.10.2",
]
tests = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
web = [
    "fastapi[standard]>=0.135.1",
    "uvicorn>=0.41.0",
]
